# ED

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
frontend/: CourseVideoPlayer.example.tsx  CourseVideoPlayer.tsx  videoManifest.ts
frontend/nextjs/: CourseVideoPlayerClient.tsx  ModuleVideoPage.example.tsx  getCountryCode.ts
frontend/preview/: index.html
platform/: README.md
platform/backend/: Dockerfile  requirements.txt
platform/backend/app/: __init__.py  config.py  database.py  deps.py  main.py  mappers.py  schemas.py  security.py
platform/backend/app/routes/: admin.py  auth.py  courses.py  enrollments.py  orders.py
platform/web/: Dockerfile  package.json
platform/web/app/: globals.css  layout.tsx  page.tsx
platform/web/app/admin/: page.tsx
platform/web/app/auth/: page.tsx
platform/web/app/catalog/: page.tsx
platform/web/app/checkout/[courseId]/: page.tsx
platform/web/app/dashboard/: page.tsx
platform/web/components/: CourseVideoPlayer.tsx
platform/web/lib/: api.ts
src/repo_to_learning_videos/: __init__.py  cli.py  config.py  diagram_generator.py  feature_detection.py  lesson_generator.py  models.py  pipeline.py  repository.py  snippet_extractor.py  video_generator.py  video_renderer.py
